# matcha

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc  .prettierrc.json  .stylelintrc  .stylelintrc.json  README.md  components.d.ts  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  renovate.json  tsconfig.json  unocss.config.ts  vite.config.ts  vitest.config.ts
.github/: CONTRIBUTING.md  release-drafter.yml  release.yml
.github/workflows/: build.yml  cleanup-caches.yml  dependency-review.yml  pr-artifact-comment.yml  release.yml
scripts/: formatArtifactComment.js  package.json
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  style.css  typed-router.d.ts  vite-env.d.ts
src-tauri/: .rustfmt.toml  Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/capabilities/: about.json  main.json  preview.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  lib.rs  main.rs  server.rs  state.rs  utils.rs
src-tauri/src/plugins/: log.rs  mod.rs  websocket.rs
src/adapter/: action.ts  adapter.ts  behav.ts  content.ts  errors.ts  event.ts  index.ts  message.ts  scene.ts  typed.ts
src/command/: index.ts
src/commands/: index.ts
src/components/: AboutInfo.vue  AppCommand.vue  AppLogo.vue  AppSidebar.vue  AppSidebarManageButton.vue  AppSidebarNavigation.vue  AppSidebarUserAvatar.vue  AppTitlebar.vue  Avatar.vue  BotEventDialog.vue  ChatAction.vue  ChatBox.vue  ChatBoxTopbar.vue  ChatContact.vue  ChatContactItem.vue  ChatInput.vue  ChatMessage.vue  ChatNotice.vue  ChatRequest.vue  CheckUpdateDialog.vue  CreateGroupForm.vue  CreateMemberForm.vue  CreateUserForm.vue  DevPlaceholder.vue  FileCard.vue  FileIcon.vue  HighlightCode.vue  JumbotronDev.vue  Loading.vue  MessageContent.vue  ModalWindow.vue  SearchBar.vue  SearchBox.vue  SelectUserList.vue  SendButton.vue  Sidebar.vue  ThemeStyleMap.vue  ThemeSwitch.vue  TimeSeparator.vue  Titlebar.vue  (+4 more)
src/components/chat/: ChatBox.vue  ChatBoxFlow.vue  ChatBoxHeader.vue  ChatBoxInput.vue  ChatBoxInputBox.vue  ChatBoxInputFileButton.vue  ChatBoxMessageArea.vue  ChatContact.vue  ChatContacts.vue  ChatContactsAddButton.vue  ChatContactsList.vue  ChatContactsListItem.vue  ChatContactsListItemMenu.vue  ChatContainer.vue  ChatDetails.vue  ChatDetailsAction.vue  ChatDetailsInfo.vue  ChatDetailsInfoBot.vue  ChatDetailsInfoGroup.vue  ChatMessage.vue  ChatMessageElement.vue  ChatMessageElementAudio.vue  ChatMessageElementFallback.vue  ChatMessageElementFile.vue  ChatMessageElementImage.vue  ChatMessageElementLink.vue  ChatMessageElementMention.vue  ChatMessageElementReply.vue  ChatMessageElementText.vue  ChatMessageElementVideo.vue  ChatMessageMenu.vue  ChatNotice.vue  ChatReplyCard.vue  ChatRequest.vue  ChatSendButton.vue  ChatTimeSeparator.vue  ChatUserCard.vue  GroupCreateFormDialog.vue  GroupEditFormDialog.vue  MemberEditFormDialog.vue  (+2 more)
src/components/layout/: Sidebar.vue  Titlebar.vue
src/components/settings/: SettingsArea.vue  SettingsTOC.vue  SettingsToolbar.vue
src/composables/: window-focus.ts  window-size.ts
src/database/: db.ts  index.ts  model.ts
src/driver/: driver.ts  index.ts
src/driver/websocket-client/: index.ts
src/driver/websocket-server/: index.ts
src/exceptions/: index.ts
src/layouts/: default.vue  native.vue  preview.vue
src/lib/: utils.ts
src/plugins/: index.ts
src/plugins/logging/: index.ts
src/plugins/websocket/: index.ts
src/router/: index.ts
src/stores/: adapter.ts  chat.ts  config.ts  connect-settings.ts  general-settings.ts  index.ts  modal.ts  protocol.ts  session.ts  state.ts  status.ts
src/styles/: contextmenu.css  highlight.css  main.css  overlayscrollbars.css  tribute.css
src/types/: component-instance.d.ts  connect.ts  index.d.ts  index.ts  info-build-meta.d.ts  vue-virtual-scroller.d.ts  vue3-video-play.d.ts  waveform-path.d.ts
src/utils/: chat.ts  file.ts  form.ts  index.ts  metadata.ts  tauri.ts  utils.ts  window.ts
src/views/: ChatStage.vue  EmptyStage.vue  SettingStage.vue  [...all].vue  about.vue  chat.vue  code.vue  index.vue  preview.vue  service.vue  setting.vue  settings.vue  test.vue  tool.vue
src/views/chat/: [chatType].[chatId].vue
src/views/preview/: [type].vue  image.vue  video.vue
(+89 files in other folders)
