[package]
name = "matcha"
version = "0.0.0"
description = "Matcha is mock chat"
authors = ["akirami"]
license = ""
repository = "https://github.com/A-kirami/matcha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "matcha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["macos-private-api", "devtools"] }
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-websocket = "2.0.0-rc"
tauri-plugin-http = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc"
tauri-plugin-process = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = "1.36"
log = "0.4"
infer = "0.16"
warp = "0.3"
reqwest = "0.12"
regex = "1.10"
base64 = "0.22"
sha2 = "0.10"
url = "2.5"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
