[package]
name = "matcha"
version = "0.0.0"
description = "Matcha is mock chat"
authors = ["akirami"]
license = ""
repository = "https://github.com/A-kirami/matcha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "matcha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-websocket = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-prevent-default = { version = "1.3", features = ["unstable-windows"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = "1.4"
tokio-stream = { version = "0.1", features = ["net"] }
log = "0.4"
infer = "0.16"
warp = "0.3"
reqwest = "0.12"
regex = "1.10"
base64 = "0.22"
sha2 = "0.10"
url = "2.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
